# CodexPilot

./: .gitignore  Cargo.toml  README.en.md  README.md
.agents/skills/capture-preview/: SKILL.md
.github/workflows/: release-assets.yml  update-release-feed.yml  windows-verify.yml
apps/codex-pilot-manager/: package-lock.json  package.json
apps/codex-pilot-manager/src/: UpdateReminderButton.tsx  autoLaunch.test.ts  autoLaunch.ts  backend.ts  dialogSync.test.ts  dialogSync.ts  main.tsx  recycleBinSupport.test.ts  recycleBinSupport.ts  styles.css  types.ts  updateReminder.test.ts  updateReminder.ts
apps/codex-pilot-manager/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/codex-pilot-manager/src-tauri/src/: launch_settings.rs  lib.rs  provider_store.rs  provider_store_rules.rs  provider_store_types.rs
apps/codex-pilot-manager/src-tauri/src/commands/: app.rs  diagnostics.rs  launch.rs  launch_helpers.rs  mod.rs  provider.rs  sessions.rs  update.rs
assets/dmg/: generate_repair_icon.py
assets/inject/: renderer-inject.js
crates/codex-pilot-core/: Cargo.toml
crates/codex-pilot-core/src/: app_paths.rs  bridge.rs  bridge_scripts.rs  ccs_import.rs  cdp.rs  diagnostic_log.rs  error.rs  helper.rs  http_client.rs  launcher.rs  lib.rs  protocol_proxy.rs  protocol_proxy_conversion.rs  protocol_proxy_conversion_request_mapping.rs  protocol_proxy_conversion_requests.rs  protocol_proxy_conversion_responses.rs  protocol_proxy_conversion_shared.rs  protocol_proxy_routes.rs  protocol_proxy_sse.rs  protocol_proxy_sse_anthropic.rs  protocol_proxy_sse_chat.rs  protocol_proxy_sse_common.rs  protocol_proxy_tests.rs  protocol_proxy_transport.rs  provider_txn.rs  relay_config.rs  relay_config_auth.rs  relay_config_tests.rs  relay_config_toml.rs  routes.rs  routes_sessions.rs  windows_integration.rs
crates/codex-pilot-data/src/: markdown.rs  provider_sync.rs  session_zip.rs  storage.rs
docs/: features.en.md  features.md
docs/contracts/: ipc.md  logging.md  paths.md  subprocess.md  windows.md
docs/development/: provider-transaction-analysis.md  readme-guidelines.md  refactor-backlog.md  session-zip-merge-analysis.md  storage-split-analysis.md
docs/superpowers/specs/: 2026-05-19-macos-dmg-layout-design.md  2026-05-19-recycle-bin-design.md  2026-05-20-manager-ui-preview-design.md  2026-05-20-manager-vertical-task-layout-design.md  2026-05-20-provider-channel-simplification-design.md  2026-05-20-single-app-auto-launch-design.md  2026-05-20-subtle-pilot-pill-design.md  2026-05-20-thread-timeline-design.md  2026-05-21-page-enhancement-switches-design.md  2026-05-22-ccswitch-import-design.md  2026-05-22-extensible-relay-protocol-design.md  (+6 more)
docs/update/: latest.json
eo-doc/agent-handbook/: INDEX.md
eo-doc/dev/: INDEX.md
scripts/: check-windows-hygiene.sh  lint-contracts.sh  package-macos.sh  package-windows.ps1  test-renderer-inject.mjs
(+35 files in other folders)
