[workspace]
resolver = "2"
members = [
  "crates/codex-pilot-core",
  "crates/codex-pilot-data",
  "apps/codex-pilot-launcher",
  "apps/codex-pilot-manager/src-tauri",
]

[workspace.package]
version = "1.3.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/hl9565/CodexPilot"

[workspace.dependencies]
anyhow = "1"
directories = "6"
futures-util = "0.3"
once_cell = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rfd = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tempfile = "3"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
