[package]
name = "codex-pilot-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
codex-pilot-data = { path = "../codex-pilot-data" }
directories.workspace = true
futures-util.workspace = true
once_cell.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
