[package]
name = "codex-pilot-manager"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "codex_pilot_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
codex-pilot-core = { path = "../../../crates/codex-pilot-core" }
codex-pilot-data = { path = "../../../crates/codex-pilot-data" }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2.0.0", features = [] }
tokio.workspace = true
